los metodos de usuario ahora usan la db
Agregar connectionString a variables en tomcat.